# github-account-scanner

./: .env.example  .gitignore  README.ja.md  README.md  package.json  pyproject.toml
.github/workflows/: monitor-sunwood.yml  validate.yml
scripts/: register_monitor_task.py  run_scheduled_monitor.py
src/github_scan/: __init__.py  cli.py  discord_webhook.py  github_app_webhook.py  monitor.py  scheduler.py  task_scheduler.py
src/github_scan/prompts/: discord_explainer_release.md  discord_explainer_repository.md  discord_explainer_request.md
state/: last-report.json  last-report.md  sunwood-ai-labs.json
tests/: test_github_app_webhook.py  test_monitor.py  test_scheduler.py
tmp/: release-notes-v0.1.0.md  release-notes-v0.2.0.md  release-qa-v0.1.0.md  release-qa-v0.2.0.md
workers/github-app-discord-bot/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.toml
workers/github-app-discord-bot/src/: index.js
workers/github-app-discord-bot/test/: index.test.js
