[project]
name = "github-scan"
version = "0.1.0"
description = "Monitor a GitHub account for new repositories and releases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
github-scan = "github_scan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_scan"]
include = [
  "src/github_scan/prompts/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/src",
  "/tests",
  "/.github",
]
