[project]
name = "github-scan"
version = "0.1.0"
description = "Local-first GitHub account monitoring CLI for new repositories, releases, and Discord thread alerts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
  "github",
  "monitoring",
  "discord",
  "releases",
  "cli",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Sunwood-ai-labs/github-account-scanner#readme"
Repository = "https://github.com/Sunwood-ai-labs/github-account-scanner"
Issues = "https://github.com/Sunwood-ai-labs/github-account-scanner/issues"

[project.scripts]
github-scan = "github_scan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_scan"]
include = [
  "LICENSE",
  "src/github_scan/prompts/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/README.ja.md",
  "/src",
  "/tests",
  "/.github",
]
